log
Wed 27 Mar 2024 08:03:40 PM UTC: 
 tests:  0|6
total_score: 0/70
b58fa78
Wed 27 Mar 2024 08:08:38 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9fc652b
Wed 27 Mar 2024 08:11:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
3ebb92d
Wed 27 Mar 2024 08:14:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0528733
Wed 27 Mar 2024 08:15:25 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f6e61ec
Wed 27 Mar 2024 08:21:16 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   52 |     return;
      |     ^~~~~~
list.c:42:8: note: declared here
   42 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
642c32e
Wed 27 Mar 2024 08:23:50 PM UTC: 
 list.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  1|5
total_score: 10/70
3cfd398
Wed 27 Mar 2024 08:24:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8d1fa02
Wed 27 Mar 2024 08:28:04 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c:48:4: error: expected identifier or ‘(’ before ‘return’
   48 | }  return NULL;
      |    ^~~~~~
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }  return NULL;
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ba6429
Wed 27 Mar 2024 08:28:51 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f13792
Wed 27 Mar 2024 08:29:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8a6e35c
Wed 27 Mar 2024 08:29:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5394d83
Wed 27 Mar 2024 08:29:57 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
911e644
Wed 27 Mar 2024 08:30:49 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
bc680bb
Wed 27 Mar 2024 08:31:38 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: expected expression before ‘}’ token
   49 | }
      | ^
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ddf492
